# teleser

./: Makefile  README.md  pyproject.toml  setup.cfg
teleser/: __init__.py  bot.py  executor.py  messages.py  validator.py
tests/: test_command_executor.py  test_command_validator.py  test_message_handler.py
